--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,7 @@ rope = "^1.2.0"
 autopep8 = "^1.6.0"
 pytest = "^7.1.2"
 pytest-watch = "^4.2.0"
+doit = "^0.36.0"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
