--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ requests = "^2.28.1"
 tqdm = "^4.64.0"
 pandas = "^1.4.3"
 gensim = "^4.2.0"
+fire = "^0.4.0"
 
 [tool.poetry.dev-dependencies]
 rope = "^1.2.0"
